crates/cli/tests/snapshots/php__php_list_does_not_create_state_when_target_platform_resolution_fails.snap
---
source: crates/cli/tests/php.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: unsupported artifact platform `linux-aarch64`\n",
}
