crates/cli/tests/snapshots/php__php_list_marks_global_default_track.snap
---
source: crates/cli/tests/php.rs
expression: list
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "Track  Default  Projects  Version  Path\n8.4  yes  0  8.4.8-pv1  <tempdir>/home/.pv/resources/php/8.4/releases/8.4.8-pv1\n",
    stderr: "",
}
