crates/cli/tests/snapshots/php__php_shim_execs_global_default_track_outside_project.snap
---
source: crates/cli/tests/php.rs
expression: "(output, exec_calls)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "",
        stderr: "",
    },
    [
        ExecCall {
            program: "<tempdir>/home/.pv/resources/php/8.3/releases/8.3.12-pv1/bin/php",
            args: [
                "-r",
                "echo 1;",
            ],
            env: [
                (
                    "PHPRC",
                    "<tempdir>/home/.pv/resources/php/8.3/etc",
                ),
                (
                    "PHP_INI_SCAN_DIR",
                    "<tempdir>/home/.pv/resources/php/8.3/etc/conf.d",
                ),
            ],
        },
    ],
)
