crates/cli/tests/snapshots/php__php_shim_execs_resolved_project_track.snap
---
source: crates/cli/tests/php.rs
expression: "(output, exec_calls)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "",
        stderr: "",
    },
    [
        ExecCall {
            program: "<tempdir>/home/.pv/resources/php/8.4/releases/8.4.8-pv1/bin/php",
            args: [
                "-v",
            ],
            env: [
                (
                    "PHPRC",
                    "<tempdir>/home/.pv/resources/php/8.4/releases/8.4.8-pv1/etc",
                ),
                (
                    "PHP_INI_SCAN_DIR",
                    "<tempdir>/home/.pv/resources/php/8.4/releases/8.4.8-pv1/etc/conf.d",
                ),
            ],
        },
    ],
)
