crates/cli/tests/snapshots/php__php_shim_fails_clearly_when_resolved_project_track_is_missing.snap
---
source: crates/cli/tests/php.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: PHP track 8.4 is not installed.\n  Run `pv php:install 8.4` to install it.\n",
}
